<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MiniApp</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome</string>
    <string name="dashboard">Dashboard</string>
    <string name="loading">Loading...</string>
    <string name="error_username_required">Username is required</string>
    <string name="error_email_required">Email is required</string>
    <string name="error_password_required">Password is required</string>
    <string name="error_passwords_dont_match">Passwords don\'t match</string>
    <string name="error_invalid_email">Invalid email format</string>
</resources>
